     * Made it so that all units are rehydrated quietly upon victory in scenario two
     * Updated the Stun weapon special code to use [object] duration=turn
     * The Human Commander unit now uses the smallfoot movetype instead of woodland
     * Display dehydration status in the sidebar
     * Ensure player always has positive gold leaving the cave in Out of the Frying Pan
 * Editor:
   * New gui theme, fixes the editor being broken on low resolutions.
     * Smaller font for displaying the terrain information.
     * Less space between the map coordinates and the terrain information
       (no need to display defense value)
     * More width sidebar
       * Features one more editing tool per row.
       * Additional brush
       * Button for default zoom switching.
     * Space for a second row of editing tools.
   * Terrain group selection from a menu, saving a lot of space.
   * Terrain palette
     * is scaled to fit at all resolutions.
     * Removed the scrolling feature which is no longer needed.
   * Map label placement tool
   * Improved performance of the Editor Settings ToD lighting controls
 * Engine:
   * Refactored scenario transition code
   * Fixed bug #19599: Engine keeps redundant unit.ai_special_ information.
 * Graphics:
   * New graphics for the Spectre.
 * Help menu:
   * Added a new Add-ons section explaining add-on usage basics
   * Added more elaborate descriptions for the Units, Abilities and Weapon
     Specials sections, with the intent of reducing confusion when they are
     initially empty (feature request #13914)
 * Language and i18n:
   * Fixed two untranslatable strings in the "new" MP lobby
   * Fixed an untranslatable string in the Multiplayer Commands help topic
   * Fixed untranslatable Cancel button label in the add-ons server network
     status dialog (bug #19659)
   * New translations: Ukrainian
   * Updated translations: Chinese (Simplified), Chinese (Traditional), Dutch,