@@ -110,6 +110,10 @@
             name= "Mark Polo"
         [/entry]
         [entry]
+            name="Matthias Schoeck (mattsc)"
+            comment="Messenger AI"
+        [/entry]
+        [entry]
             name= "Isaac"
         [/entry]
         [entry]
