@@ -224,31 +224,40 @@
         user_team_name=_"Human Ally"
         {FLAG_VARIANT undead}
 
+        {ai/aliases/stable_singleplayer.cfg}
         [ai]
-            # AI will attack a weak unit with a max of 3,4,5 units
-            # depending on the difficulty (default=5)
-            {ATTACK_DEPTH 3 4 5}
-
-            aggression=0.75
-            caution=0.25
-
-            [leader_goal]
-                x=29-60
-                y=1
-            [/leader_goal]
-
-            protect_leader=10.0
-            protect_leader_radius=20
-
-            [target]
-                side=1
-                value=50
-            [/target]
-
-            [target]
-                side=5
-                value=1
-            [/target]
+            version=10710
+            [engine]
+                name="lua"
+                code= <<
+                    local ai = ...
+                    return wesnoth.require("campaigns/Under_the_Burning_Suns/ai/messenger-escort_engine.lua").init(ai)
+                >>
+            [/engine]
+            {MODIFY_AI_ADD_CANDIDATE_ACTION 1 main_loop (
+                [candidate_action]
+                    engine=lua
+                    name=protect_unit
+                    evaluation="return (...):attack_eval('messenger', 28, 1)"
+                    execution="(...):attack_exec()"
+                [/candidate_action]
+            )}
+            {MODIFY_AI_ADD_CANDIDATE_ACTION 1 main_loop (
+                [candidate_action]
+                    engine=lua
+                    name=protect_unit
+                    evaluation="return (...):messenger_move_eval('messenger')"
+                    execution="(...):messenger_move_exec('messenger', 28, 1)"
+                [/candidate_action]
+            )}
+            {MODIFY_AI_ADD_CANDIDATE_ACTION 1 main_loop (
+                [candidate_action]
+                    engine=lua
+                    name=protect_unit
+                    evaluation="return (...):other_move_eval('messenger')"
+                    execution="(...):other_move_exec('messenger')"
+                [/candidate_action]
+            )}
         [/ai]
     [/side]
 
@@ -4338,12 +4347,12 @@
 
                 [set_variable]
                     name=loc_y
-                    rand=21..25
+                    rand=23..25
                 [/set_variable]
 
                 [unit]
                     type=Dragoon
-                    id=Human Messenger
+                    id=messenger
                     name= _ "Human Messenger"
                     canrecruit=yes
                     x=$loc_x
@@ -4442,11 +4451,11 @@
         first_time_only=no
 
         [filter]
-            id=Human Messenger
+            id=messenger
         [/filter]
 
         [message]
-            speaker=Human Messenger
+            speaker=messenger
             message= _ "No! I must get help!"
         [/message]
 
@@ -4463,12 +4472,12 @@
 
         [filter]
             side=8
-            id= "Human Messenger"
+            id=messenger
             y=1
         [/filter]
 
         [kill]
-            id= "Human Messenger"
+            id=messenger
             animate=no
             fire_event=no
         [/kill]
