@@ -54,6 +54,7 @@ Version 1.11.0-svn:
      * The Human Commander unit now uses the smallfoot movetype instead of woodland.
      * Display dehydration status in the sidebar.
      * Ensure player always has positive gold leaving the cave in Out of the Frying Pan.
+     * New and much improved AI for human messenger in "Out of the Frying Pan".
 
  * Editor:
    * New gui theme, fixes the editor being broken on low resolutions.
